# cosima_msgs

./: CMakeLists.txt  package.xml
msgs/: CallTraceSample.msg  CallTraceSampleCollection.msg
srvs/: Assemble.srv  ContactForce.srv  ContactSituation.srv  GetClamp.srv  Move.srv
