<?xml version="1.0"?>
<package>
  <name>cosima_msgs</name>
  <version>1.0.0</version>
  <description>Messages for the CoSiMA</description>

  <maintainer email="dwigand@cor-lab.de">Dennis Leroy Wigand</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
